# vulkanic-fractals

./: .gitignore  .project.gf  Cargo.toml  README.md  flake.nix  imgui.ini  shell.nix  vk_layer_settings.txt
data/shaders/: basic.vert  bindless.common.glsl  fractal.bindless.vert  fractal.core.glsl  julia.bindless.frag  julia.frag  mandelbrot.bindless.frag  mandelbrot.frag  ui.bindless.frag  ui.bindless.vert  ui.frag  ui.vert
data/shaders/apps/triangle/: tri.vert
data/shaders/core/: bindless.core.glsl
src/: fractal.rs  main.rs  math.rs  shader.rs  spin_mutex.rs  ui.rs  vulkan_bindless.rs  vulkan_buffer.rs  vulkan_image.rs  vulkan_mapped_memory.rs  vulkan_pipeline.rs  vulkan_renderer.rs  vulkan_shader.rs
