[package]
name = "vulkanic-fractals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "*"}
flexi_logger = "*"
winit = "*"
enum-iterator = "*"
ash = { version = "*", features = [ "linked" ] }
shaderc = "*"
imgui = "0.11.0"
thiserror = "1.0.50"
palette = "0.7.3"
enterpolation = "0.2.1"
crevice = "0.14.0"
num_enum = "0.7.1"
